fix: minor code cleanups